sonar qube warnings fixed